[gd_scene load_steps=9 format=3 uid="uid://vb70ep72ce87"]

[ext_resource type="Script" path="res://Events/Combat/Hero/Hero.gd" id="1_b5ksb"]
[ext_resource type="SpriteFrames" uid="uid://dt2qtsa0u0psd" path="res://Events/Combat/Hero/HeroResources/Huntress.tres" id="2_74xx6"]
[ext_resource type="Script" path="res://Events/Combat/Hero/state_machine.gd" id="6_pdh1x"]
[ext_resource type="Script" path="res://Events/Combat/Hero/idle.gd" id="7_nfoyv"]
[ext_resource type="Script" path="res://Events/Combat/Hero/attack.gd" id="8_2mvtm"]
[ext_resource type="Script" path="res://Events/Combat/Hero/hit.gd" id="9_7dre1"]
[ext_resource type="Script" path="res://Events/Combat/Hero/death.gd" id="10_se3kh"]
[ext_resource type="Script" path="res://Events/Combat/Hero/poison.gd" id="12_yhjdw"]

[node name="Hero" type="Node2D"]
script = ExtResource("1_b5ksb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_74xx6")
animation = &"attack"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_pdh1x")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_nfoyv")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("8_2mvtm")

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource("9_7dre1")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("10_se3kh")

[node name="Poison" type="Node" parent="StateMachine"]
script = ExtResource("12_yhjdw")

[node name="HealthTracker" type="Label" parent="."]
offset_left = -21.0
offset_top = 28.0
offset_right = 295.0
offset_bottom = 165.0
scale = Vector2(0.07, 0.07)
theme_override_font_sizes/font_size = 100
text = "health"
horizontal_alignment = 1

[node name="BlockTracker" type="Label" parent="."]
offset_top = 28.0
offset_right = 316.0
offset_bottom = 165.0
scale = Vector2(0.07, 0.07)
theme_override_colors/font_color = Color(0.639216, 0.756863, 0.901961, 1)
theme_override_font_sizes/font_size = 100
text = "block
"
horizontal_alignment = 1

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine" method="_on_animation_finished"]
